# gbemu

./: Cargo.toml  README.md  pokemon_red_gbc.gb
src/: gb.rs  main.rs
src/gb/: bios.rs  cpu.rs  emu.rs  file.rs  gbwindow.rs  hwregisters.rs  instructions.rs  joypad.rs  mbc.rs  ram.rs  registers.rs  rom.rs  testcpu.rs
src/gb/graphics/: fetcher.rs  fifo.rs  lcd.rs  mod.rs  oam.rs  palette.rs  pixel.rs  ppu.rs  screen.rs  sprite.rs  tile.rs
